--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,115 +1,7 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
 
-<head>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
-
-
-  <!-- Custom styles for this template -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <!-- Custom styles for this template -->
-  <script>
-    var themeBool = false;
-    function changeTheme() {
-      var theme = document.getElementsByTagName('body')[0].getAttribute('data-bs-theme');
-      if (theme == 'dark') {
-        document.getElementsByTagName('body')[0].setAttribute('data-bs-theme', 'light');
-        themeBool = true;
-
-        let params = {
-          theme: "light"
-        };
-        let searchParams = new URLSearchParams(params);
-        let newURL = window.location.protocol + "//" + window.location.host + window.location.pathname + "?" + searchParams.toString();
-        window.history.pushState({ path: newURL }, '', newURL);
-
-      } else {
-        document.getElementsByTagName('body')[0].setAttribute('data-bs-theme', 'dark');
-        themeBool = false;
-
-        let params = {
-          theme: "dark"
-        };
-        let searchParams = new URLSearchParams(params);
-        let newURL = window.location.protocol + "//" + window.location.host + window.location.pathname + "?" + searchParams.toString();
-        window.history.pushState({ path: newURL }, '', newURL);
-      }
-    }
-    function checkTheme(themeArg) {
-      var theme = document.getElementsByTagName('body')[0].getAttribute('data-bs-theme');
-      if(themeArg!=theme) changeTheme();
-    }
-  </script>
-
-  <style>
-    @media (min-width: 768px) {
-      #dd {
-        min-height: 100vh;
-      }
-
-      .card-item-column {
-        min-height: 18em;
-      }
-    }
-
-    @media (max-width: 768px) {
-      .card-item-column {
-        min-height: 13em;
-      }
-
-      #dd {
-        max-width: 80%;
-        border-color: #212529;
-        background-color: #212529;
-      }
-
-      #sidebarMenu {
-        max-width: 80%;
-        background-color: #212529;
-      }
-    }
-
-    @media (min-width:1400px) {
-      .card-item-column {
-        min-height: 11em;
-      }
-    }
-
-
-    .cart-footer {
-      margin-top: auto;
-    }
-
-    .card {
-      transition: .10s, transform .10s ease;
-      -moz-transition: .10s, transform .10s ease;
-      -webkit-transition: .10s, transform .10s ease;
-    }
-
-    .card:hover {
-      cursor: pointer;
-      -ms-transform: scale(1.01);
-      /* IE 9 */
-      -webkit-transform: scale(1.01);
-      /* Safari */
-      transform: scale(1.01);
-    }
-
-    .card:active {
-      -ms-transform: scale(0.99);
-      /* IE 9 */
-      -webkit-transform: scale(0.99);
-      /* Safari */
-      transform: scale(0.99);
-    }
-  </style>
-</head>
+<%- include('partials/head') %>
 
 <body data-bs-theme="dark">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -137,15 +29,10 @@
       editModal.addEventListener('hidden.bs.modal', function () {
         onModalClosed();
       });
-    });
-
-    document.addEventListener('DOMContentLoaded', function () {
-
       let params = new URLSearchParams(window.location.search);
       let theme = params.get('theme');
       checkTheme(theme);
-
-    }, false);
+    });
   </script>
   <!-- Modal for adding Naggers -->
   <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
@@ -237,80 +124,14 @@
     </div>
   </div>
   <!-- top header-->
-  <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow py-md-2" data-bs-theme="dark">
-    <a style="text-decoration: none;" class="navbar-brand col-md-3 col-lg-2 my-1 px-3 py-2 text-white h-1"
-      href="index.html">Nagger</a>
-
-    <ul class="navbar-nav flex-row d-md-none">
-      <li class="nav-item text-nowrap">
-        <button class="navbar-toggler d-md-none mx-2" type="button" data-bs-toggle="offcanvas"
-          data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </li>
-    </ul>
-
-  </header>
+    <%- include('partials/header') %>
   <!-- Main Container -->
   <div class="container-fluid" style="min-height: 40em;">
 
     <div class="row">
 
       <!-- Navbar/Navdrawer -->
-      <div id="dd" class="sidebar border border-right col-md-2 col-2 col-lg-2 p-0 bg-body-tertiary h-md-100">
-
-        <div class="offcanvas-md offcanvas-end bg-body-tertiary" tabindex="-1" id="sidebarMenu"
-          aria-labelledby="sidebarMenuLabel">
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="sidebarMenuLabel">Menu</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#sidebarMenu"
-              aria-label="Close"></button>
-          </div>
-          <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="#">
-
-                  Accounts
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link d-flex align-items-center gap-2" href="/devices">
-
-                  Devices
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link d-flex align-items-center gap-2" href="#">
-                  About
-                </a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link d-flex align-items-center gap-2" href="#">
-                  Report a bug
-                </a>
-              </li>
-              <hr class="my-2 mx-3">
-              <li class="nav-item">
-                <a class="nav-link d-flex align-items-center gap-2" href="#">
-                  Log out
-                </a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link d-flex align-items-center gap-2" href="#" onclick="changeTheme()">
-                  Change theme
-                </a>
-              </li>
-
-            </ul>
-
-
-          </div>
-        </div>
-      </div>
+        <%- include('partials/navdrawer') %>
       <!-- Main Content -->
       <main class="col-md-9 col-lg-10 px-2 px-md-4 py-2 py-md-4">
         <div class="container-fluid px-0 text-center">
@@ -411,38 +232,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="bg-body-tertiary py-4">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <h5>Contact Us</h5>
-          <p>Email: contact@example.com</p>
-          <p>Phone: (123) 456-7890</p>
-          <p>Address: 123 Main Street, Anytown, USA</p>
-        </div>
-        <div class="col-md-4">
-          <h5>Quick Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
-
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <h5>Follow Us</h5>
-          <a href="#" class="me-2"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="me-2"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="me-2"><i class="fab fa-linkedin"></i></a>
-          <a href="#" class="me-2"><i class="fab fa-instagram"></i></a>
-        </div>
-      </div>
-      <div class="row mt-3">
-        <div class="col text-center">
-          <p class="mb-0">© 2024 Your Company Name. All rights reserved.</p>
-        </div>
-      </div>
-    </div>
-  </footer>
+    <%- include('partials/footer') %>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.2/dist/chart.umd.js"
     integrity="sha384-eI7PSr3L1XLISH8JdDII5YN/njoSsxfbrkCTnJrzXt+ENP5MOVBxD+l6sEG4zoLp"
