account logic partially implemented

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -73,7 +73,7 @@
         </div>
         <div class="modal-footer">
 
-          <button type="button" class="btn btn-success">Save changes</button>
+          <button type="button" class="btn btn-success">Add</button>
         </div>
       </div>
     </div>
@@ -136,8 +136,7 @@
       <main class="col-md-9 col-lg-10 px-2 px-md-4 py-2 py-md-4">
         <div class="container-fluid px-0 text-center">
           <div id="row" class="row g-2 row-cols-2 text-md-center row-cols-lg-3 row-cols-xl-4 row-cols-xxl-5">
-
-
+            
             <!-- Card -->
             <div class="col d-flex align-items-stretch card-item-column" data-bs-toggle="modal"
               data-bs-target="#editModal">
