--- a/views/register.ejs
+++ b/views/register.ejs
@@ -84,7 +84,7 @@
             </div>
             
             <div class="mb-3 form-floating">
-              <input type="text" class="form-control" required name="email" id="email" aria-describedby="emailHelp"
+              <input type="email" class="form-control" required name="email" id="email" aria-describedby="emailHelp"
                 placeholder="Enter email">
               <label for="emailTextField" class="form-label">Email Address</label>
             </div>
