--- a/views/login.ejs
+++ b/views/login.ejs
@@ -79,13 +79,13 @@
             <h1 class="h3 mb-3 fw-normal">Log in</h1>
             
             <div class="mb-3 form-floating">
-              <input type="text" class="form-control" required id="email" aria-describedby="emailHelp"
+              <input type="text" class="form-control" name="username" required id="email" aria-describedby="emailHelp"
                 placeholder="Enter email or username">
               <label for="emailTextField" class="form-label">Email or Username</label>
             </div>
 
             <div class="mb-3 form-floating">
-              <input type="password" class="form-control" id="password" required placeholder="Password">
+              <input type="password" name="password" class="form-control" id="password" required placeholder="Password">
               <label for="passwordTextField" class="form-label">Password</label>
             </div>
             <% if(invalidCredentials) { %>
