--- a/views/register.ejs
+++ b/views/register.ejs
@@ -94,7 +94,14 @@
               <label for="passwordTextField" class="form-label">Password</label>
             </div>
 
-
+            <% if(errorFlag) { %>
+            <div class="mb-3">
+              <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <%= errorMessage %>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            </div>
+            <% } %>
 
             <button type="submit" class="btn btn-success">Create Account</button>
           </form>
