--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
                   subscribeUserToPushNotifications();
 
                 }).catch(function (error) {
-                  console.error('Service Worker registration failed:', error);
+                  alert(error);
                 });
               }
               else {
@@ -39,6 +39,7 @@
             }
           });
         }
+        else alert('Notifications are not supported in this browser. Please use a different browser.');
 
 
 
