--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,10 +16,10 @@
       var currentNaggerId;
       function registerServiceWorker() {
         if('Notification' in window) alert('Notification in window');
-        if(navigator.serviceWorker) alert('navigator.serviceWorker');
-        if('serviceWorker' in navigator) alert('serviceWorker in navigator');
+        if(navigator.serviceWorker) alert('navigator.serviceWorker'); //iOS supported
+        if('serviceWorker' in navigator) alert('serviceWorker in navigator'); //iOS supported
         if('PushManager' in window) alert('PushManager in window');
-        
+
 
         if ('Notification' in window && (navigator.serviceWorker || 'serviceWorker' in navigator)) {
           Notification.requestPermission().then(permission => {
@@ -40,7 +40,7 @@
 
             } else {
               // Permissions denied, notify user
-              alert('Notifications are disabled. Please enable them in your browser settings.');
+              alert('Notifications are disabled. Please enable them in your browser settings.'+permission);
             }
           });
         }
