--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,6 +10,7 @@
     <!-- Custom styles for this template -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="manifest.json" rel="manifest">
     <!-- Custom styles for this template -->
     <script src="theme.js" defer></script>
   
