--- a/views/partials/navdrawer.ejs
+++ b/views/partials/navdrawer.ejs
@@ -1,59 +1,79 @@
 <div id="dd" class="sidebar border border-right col-md-2 col-2 col-lg-2 p-0 bg-body-tertiary h-md-100">
 
-    <div class="offcanvas-md offcanvas-end bg-body-tertiary" tabindex="-1" id="sidebarMenu"
-      aria-labelledby="sidebarMenuLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="sidebarMenuLabel">Menu</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#sidebarMenu"
-          aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
-        <ul class="nav flex-column">
-            <li class="nav-item">
-                <a class="nav-link d-flex align-items-center gap-2 active" href="/home">
+  <div class="offcanvas-md offcanvas-end bg-body-tertiary" tabindex="-1" id="sidebarMenu"
+    aria-labelledby="sidebarMenuLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="sidebarMenuLabel">Menu</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#sidebarMenu"
+        aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
+      <ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link d-flex align-items-center gap-2 active" href="/home">
 
-                  Home
-                </a>
-              </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-center gap-2 active" href="/account">
+            Home
 
-              Account
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-center gap-2" href="/devices">
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link d-flex align-items-center gap-2 active" href="/account">
 
-              Devices
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-center gap-2" href="/about">
-              About
-            </a>
-          </li>
+            Account
 
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-center gap-2" href="/report-a-bug">
-              Report a bug
-            </a>
-          </li>
-          <hr class="my-2 mx-3">
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-center gap-2" href="/logout">
-              Log out
-            </a>
-          </li>
+          </a>
+        </li>
 
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-center gap-2" href="#" onclick="changeTheme()">
-              Change theme
-            </a>
-          </li>
+        <li class="nav-item">
+          <a class="nav-link d-flex align-items-center gap-2" href="/setup">
 
-        </ul>
+            Setup
+
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link d-flex align-items-center gap-2" href="/devices">
+
+            Devices
+
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link d-flex align-items-center gap-2" href="/about">
+
+            About
+
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link d-flex align-items-center gap-2" href="/report-a-bug">
+
+            Report a bug
+
+          </a>
+        </li>
+        <hr class="my-2 mx-3">
+        <li class="nav-item">
+          <a class="nav-link d-flex align-items-center gap-2" href="/logout">
+
+            Log out
+
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link d-flex align-items-center gap-2" href="#" onclick="changeTheme()">
+
+            Change theme
+
+          </a>
+        </li>
+
+      </ul>
 
 
-      </div>
     </div>
   </div>
+</div>
