storing device information

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,40 +11,13 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"></script>
 
+      <script type="module" src="register-sw.js">
+        </script>
+
     <!-- DOM loaded event listener -->
     <script>
       var currentNaggerId;
-      function registerServiceWorker() {
-
-
-        if ('Notification' in window && (navigator.serviceWorker || 'serviceWorker' in navigator)) {
-          Notification.requestPermission().then(permission => {
-            if (permission === 'granted') {
-
-              if ('serviceWorker' in navigator && 'PushManager' in window) {
-                navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
-
-                  subscribeUserToPushNotifications();
-
-                }).catch(function (error) {
-                  alert(error);
-                });
-              }
-              else {
-                alert('Service Worker and PushManager are not supported in this browser. Please use a different browser.');
-              }
-
-            } else {
-              // Permissions denied, notify user
-              alert('Notifications are disabled. Please enable them in your browser settings.' + permission);
-            }
-          });
-        }
-        else alert('Notifications are not supported in this browser. Please use a different browser.');
-
-
-
-      };
+      var theme;
       document.addEventListener('DOMContentLoaded', function () {
         let setupAlert = document.getElementById('setupAlert');
 
@@ -56,16 +29,17 @@
               
               if (registration && registration.active && registration.active.scriptURL === 'https://localhost:3000/service-worker.js') {
                 isRegistered = true;
+                console.log("t");
                 break;
               }
             }
             if (!isRegistered) {
-           
+           setupAlert.classList.remove('d-none');
            setupAlert.classList.add('d-flex');
 
          }
 
-         else setupAlert.classList.add('d-none');
+     
           })
           
         }
@@ -91,7 +65,7 @@
           onModalClosed();
         });
         let params = new URLSearchParams(window.location.search);
-        let theme = params.get('theme');
+        theme = params.get('theme');
         checkTheme(theme);
 
         document.getElementById('editModal').addEventListener('show.bs.modal', function (event) {
@@ -249,45 +223,7 @@
     <!-- Request push notifications -->
     <script>
 
-      function sendSubscriptionToServer(subscription) {
-        return fetch('/subscribe', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify(subscription)
-        });
-      }
-
-      function subscribeUserToPushNotifications() {
-        navigator.serviceWorker.ready.then(function (registration) {
-          return registration.pushManager.subscribe({
-            userVisibleOnly: true,
-            applicationServerKey: urlBase64ToUint8Array('BDc4tPwlYDOyk7AWjeVOWnnlHMh0_IieE7uMb0g-ertvHKhf-sFKgR5_enTsTU5Pzpxq2rreqkka3T0-MsY5Q5Y')
-          });
-        }).then(function (subscription) {
-    
-          sendSubscriptionToServer(subscription);
-        }).catch(function (error) {
-          console.error('Failed to subscribe the user: ', error);
-        });
-      }
-
-      function urlBase64ToUint8Array(base64String) {
-        const padding = '='.repeat((4 - base64String.length % 4) % 4);
-        const base64 = (base64String + padding)
-          .replace(/\-/g, '+')
-          .replace(/_/g, '/');
-
-        const rawData = window.atob(base64);
-        const outputArray = new Uint8Array(rawData.length);
-
-        for (let i = 0; i < rawData.length; ++i) {
-          outputArray[i] = rawData.charCodeAt(i);
-        }
-        return outputArray;
-      }
-
+  
       function triggerNotification() {
         fetch('/sendNotification', {
           method: 'POST',
@@ -410,7 +346,7 @@
             <main class="col-md-9 col-lg-10 px-2 px-md-4 py-2 py-md-4">
               <div class="container-fluid px-0 text-center">
 
-                <div class="alert alert-warning align-items-start justify-content-start" id="setupAlert" role="alert">
+                <div class="alert alert-warning align-items-start justify-content-start d-none" id="setupAlert" role="alert">
 
                   <div>
                     <i class="bi bi-exclamation-triangle"></i> You need to <a href="setup">setup</a> the app before you can use its features.
@@ -459,7 +395,7 @@
                           </div>
                         </div>
                         <button class="btn btn-primary" onclick="triggerNotification()">Trigger Notification</button>
-                        <button class="btn btn-primary" onclick="registerServiceWorker()">Subscribe</button>
+   
                 </div>
               </div>
             </main>
