--- a/views/setup.ejs
+++ b/views/setup.ejs
@@ -10,15 +10,23 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
             integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
             crossorigin="anonymous"></script>
-            <script>
-                document.addEventListener('DOMContentLoaded', function () {
+        <script>
+            var theme;
+            document.addEventListener('DOMContentLoaded', function () {
+
+                let params = new URLSearchParams(window.location.search);
+                theme = params.get('theme');
+                checkTheme(theme);
+
+            }, false);
+
+
             
-                  let params = new URLSearchParams(window.location.search);
-                  let theme = params.get('theme');
-                  checkTheme(theme);
-            
-                }, false);
-              </script>
+        </script>
+        <script type="module">
+            import { registerServiceWorker } from '/register-sw.js';
+            document.getElementById('enableNotificationsButton').addEventListener('click', registerServiceWorker);
+        </script>
         <%- include('partials/header') %>
 
             <div class="container-fluid" style="min-height: 40em;">
@@ -26,12 +34,95 @@
                 <div class="row">
                     <!-- Navbar/Navdrawer -->
                     <%- include('partials/navdrawer') %>
-                    <!-- Main Content -->
-                    <main class="col-md-9 col-lg-10 px-2 px-md-4 py-2 py-md-4">
-                        <p>Setup page (in development)</p>
-                      </main>
+                        <!-- Main Content -->
+                        <main class="col-md-9 col-lg-10 px-2 px-md-4 py-2 py-md-4">
+                            <div class="container">
+                                <div style="margin-bottom:4em">
+                                    <h1 class="display-5 my-2">Setting up the Application</h1>
+                                    <p class="my-2">
+                                        Before you can use all features of the Application, you need to complete a
+                                        one-time setup that varies depending on the platform that you are using.
+                                    </p>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12 col-lg-4 mx-auto my-4 my-lg-0 mt-0">
+                                        <h4 class="text-center">Android</h4>
+                                        <p>
+                                        <ol>
+                                            <li>
+                                                Make sure you are not in incognito mode
+                                            </li>
+                                            <li>
+                                                Make sure that you have enabled notifications permissions for the web
+                                                browser you are using.
+                                            </li>
+                                            <li>
+                                                Click on the 'Enable Notifications' button below.
+                                            </li>
+                                            <li>
+                                                When prompted, click 'Allow' to enable notifications.
+                                            </li>
+                                            <li>
+                                                You are now ready to use the application.
+                                            </li>
+                                        </ol>
+                                        </p>
+                                    </div>
+                                    <div class="col-12 col-lg-4 mx-auto my-4 my-lg-0">
+                                        <h4 class="text-center">Windows</h4>
+                                        <ol>
+                                            <li>
+                                                Make sure you are not in incognito mode
+                                            </li>
+                                            <li>
+                                                Click on the 'Enable Notifications' button below.
+                                            </li>
+                                            <li>
+                                                When prompted, click 'Allow' to enable notifications.
+                                            </li>
+                                            <li>
+                                                You are now ready to use the application.
+                                            </li>
+                                        </ol>
+                                    </div>
+                                    <div class="col-12 col-lg-4 mx-auto my-4 my-lg-0">
+                                        <h4 class="text-center">iPhone iOS</h4>
+                                        <p>
+                                        <ol>
+                                            <li>Make sure you are using Safari, Google Chrome or Edge, as these are the
+                                                only supported browsers by this app.</li>
+                                            <li>
+                                                Make sure you are not in private/incognito mode
+                                            </li>
+                                            <li>
+                                                You need to add this application to your home screen.
+                                            </li>
+                                            <li>
+                                                Click on the 'Enable Notifications' button below.
+                                            </li>
+                                            <li>
+                                                When prompted, click 'Allow' to enable notifications.
+                                            </li>
+                                            <li>
+                                                You are now ready to use the application.
+                                            </li>
+                                            <li>
+                                                If you get an error message, you are may be required to enable
+                                                notifications in Safari settings (Settings > Safari > Advanced > Feature
+                                                Flags)
+                                            </li>
+                                        </ol>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div style="margin:auto; display:flex; justify-content: center;" class="mt-4">
+                                <button class="btn btn-success my-4 mx-auto" id="enableNotificationsButton">Enable Notifications</button>
+                                </div>
+                            </div>
+                        </main>
                 </div>
             </div>
             <%- include('partials/footer') %>
     </body>
+
 </html>
