--- a/views/home.ejs
+++ b/views/home.ejs
@@ -265,12 +265,12 @@
 
                 <select name="severity" class="form-select" id="severityDropdownAdd" aria-placeholder="dd"
                   placeholder="dd">
-                  <option value="0">Every 10 minutes</option>
-                  <option value="1">Every 20 minutes</option>
-                  <option value="2">Every hour</option>
-                  <option value="3">Every 2 hours</option>
-                  <option value="4">Every 4 hours</option>
-                  <option value="5">Every 7 hours</option>
+                  <option value=0>Every 10 minutes</option>
+                  <option value=1>Every 20 minutes</option>
+                  <option value=2>Every hour</option>
+                  <option value=3>Every 2 hours</option>
+                  <option value=4>Every 4 hours</option>
+                  <option value=5>Every 7 hours</option>
                 </select>
                 <label for="severityDropdownAdd" class="form-label">Notification frequency</label>
               </div>
@@ -394,7 +394,6 @@
                             </div>
                           </div>
                         </div>
-                        <button class="btn btn-primary" onclick="triggerNotification()">Trigger Notification</button>
    
                 </div>
               </div>
