--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,45 +2,61 @@
 <html lang="en" data-bs-theme="auto">
 <%- include('partials/head'); %>
 
-<body data-bs-theme="dark">
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
+  <body data-bs-theme="dark">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"></script>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
 
-      let params = new URLSearchParams(window.location.search);
-      let theme = params.get('theme');
-      checkTheme(theme);
+        let params = new URLSearchParams(window.location.search);
+        let theme = params.get('theme');
+        checkTheme(theme);
 
-    }, false);
-  </script>
+      }, false);
+    </script>
 
-  <!-- top header-->
+    <!-- top header-->
     <%- include('partials/header') %>
-  <!-- Main Container -->
-  <div class="container-fluid" style="min-height: 30em;">
+      <!-- Main Container -->
+      <div class="container-fluid" style="min-height: 30em;">
 
-    <div class="row">
+        <div class="row">
 
-      <!-- Navbar/Navdrawer -->
-        <%- include('partials/navdrawer') %>
-      <!-- Main Content -->
-      <main class="col-md-9 col-lg-10 px-2 px-md-4 py-2 py-md-4">
-        <h1 class="h2">About</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-          featured content or information.</p>
-      </main>
-    </div>
-  </div>
+          <!-- Navbar/Navdrawer -->
+          <%- include('partials/navdrawer') %>
+            <!-- Main Content -->
+            <main class="col-md-9 col-lg-10 px-2 px-md-4 py-2 py-md-4">
+              <div class="container">
+                <div style="margin-bottom:4em">
+                  <h1 class="display-5 my-2">About me</h1>
+                  <p class="my-2">
+                    I am a software engineering student at the Technical University of Vienna.
+                     I am passionate about programming and learning about new technologies that revolve around computers and software development.
+                  </p>
+                </div>
 
-  <!-- Footer -->
-    <%- include('partials/footer') %>
+                <div style="margin-bottom:4em">
+                  <h1 class="display-5 my-2">About this project</h1>
+                  <p class="my-2">
+                    Nagger is a web-based application that is designed to be used to set reminders for small and easily forgettable tasks that we face throughout the day,
+                    such as wishing happy birthday to a distant relative or an acquaintance.
+                  </p>
+                </div>
+              
 
-</body>
+              </div>
+            </main>
+        </div>
+      </div>
+
+      <!-- Footer -->
+      <%- include('partials/footer') %>
+
+  </body>
 
 </html>
